everything but illustrations

--- a/index.html
+++ b/index.html
@@ -3,40 +3,32 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home is...DES 157B!</title>
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
-
-    <link href="styles.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@200;500&display=swap" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet"/>
+    <title>Ministudio 0 Home is...</title>
     <script src="script.js" defer></script>
-
 </head>
 
 <body>
-
     <div id="container">
-
         <header>
-
-            <h1>
-                Your name here.
-            </h1>
-
-            <h2>DES 157B - Interactive Media III - w 2022
-            </h2>
-
-            <!--this is for the interactive banner-->
-            <div id="banner">
-                <h3>This is my banner!</h3>
+            <div>
+                <img src="images/lsh1.png" alt="LSH" width="400" id="lsh1">
+                <h2>DES 157B - Interactive Media III - S23</h2>
             </div>
-
+            <div id="banner">
+                <img src="images/bear1.png" alt="BEARone" width="300" id="bear1">
+            </div>
         </header>
 
         <main>
-
             <section id="projects">
-
-                <h3>ministudios</h3>
+                <h3>⭒⭒ ministudios ⭒⭒</h3>
                 <nav>
                     <ol>
                         <li><a href="#">blockbuster video</a></li>
@@ -44,7 +36,7 @@
                         <li><a href="#">library liberty</a></li>
                     </ol>
                 </nav>
-                <h3>toolkit</h3>
+                <h3>⭒⭒ toolkit ⭒⭒</h3>
                 <nav>
                     <ol>
                         <li><a href="#">touch events</a></li>
@@ -52,11 +44,10 @@
                         <li><a href="#">arrow functions</a></li>
                     </ol>
                 </nav>
-
             </section>
 
             <section id="research">
-                <h3>research</h3>
+                <h3>⭒⭒ research ⭒⭒</h3>
                 <nav>
                     <ul>
                         <li><a href="#">selfie seal</a>
@@ -73,11 +64,10 @@
                         </li>
                     </ul>
                 </nav>
-
             </section>
 
             <section id="development">
-                <h3>development</h3>
+                <h3>⭒⭒ development ⭒⭒</h3>
                 <nav>
                     <ul>
                         <li><a href="#">topic choice</a></li>
@@ -94,7 +84,7 @@
             </section>
 
             <section id="capstone">
-                <h3>capstone</h3>
+                <h3>⭒⭒ capstone ⭒⭒</h3>
                 <nav>
                     <ul>
                         <li><a href="#">case study</a></li>
@@ -103,12 +93,10 @@
                 </nav>
             </section>
 
-            <button>switch</button>
+            <button><img src="images/paw_button.png" alt="paw" width="40"></button>
 
         </main>
-
     </div>
-
 </body>
 
 </html>
