--- a/capstone/final/research/selfie.html
+++ b/capstone/final/research/selfie.html
@@ -14,7 +14,7 @@
     </header>
     <h2>site visitation</h2>
     <img src="images/selfie.JPG" alt="selfie" width="600">
-    <figcaption>taken by Lauren Hong, 2022</figcaption>
+    <p>taken by Lauren Hong, 2022</p>
     <h2>article research</h2>
     <p>The city of Davis was founded in 1869. The city is noted for its "convergence of geographical and infrastructural elements" (Shelton 2021). Davis's core values are</p>
     <p>Aspiration; Community; Cooperation; Compassion; Leadership; Innovation; Engagement; Global Citizenship; Stewardship; Vision; Optimism.</p>
