--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                     <ol>
                         <li><a href="studio1/index.html">blockbuster video</a></li>
                         <li><a href="studio2/index.html">check yourself</a></li>
-                        <li><a href="#">library liberty</a></li>
+                        <li><a href="studio3/index.html">library liberty</a></li>
                     </ol>
                 </nav>
                 <h3>⭒⭒ toolkit ⭒⭒</h3>
                 <nav>
                     <ol>
-                        <li><a href="#">touch events</a></li>
+                        <li><a href="touch_events/index.html">touch events</a></li>
                         <li><a href="#">lazy loader</a></li>
                         <li><a href="#">arrow functions</a></li>
                     </ol>
