--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </li>
                         <li><a href="#">interviews</a>
                         </li>
-                        <li><a href="#">annotated bibliography</a>
+                        <li><a href="capstone/research/bibliography.html">annotated bibliography</a>
                         </li>
                         <li><a href="#">visual research</a>
                         </li>
