--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <nav>
                     <ol>
                         <li><a href="touch_events/index.html">touch events</a></li>
+                        <li><a href="friendslist/index.html">friends list</a></li>
                         <li><a href="#">lazy loader</a></li>
                         <li><a href="#">arrow functions</a></li>
                     </ol>
