--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <nav>
                     <ul>
                         <li><a href="capstone/development/proposal.html">topic choice</a></li>
-                        <li><a href="#">project brief</a></li>
+                        <li><a href="capstone/development/projectbrief.html">project brief</a></li>
                         <li><a href="#">storyboard</a></li>
                         <li><a href="#">flows</a></li>
                         <li><a href="#">interactive comp</a></li>
