--- a/studio3/index.html
+++ b/studio3/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet"/>
     <title>Ministudio 3: Library Liberty</title>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <section id="camera">
+        <p>camera here</p>
+    </section>
+    <section id="palette">
+        <h1>What do you see?</h1>
+        <button id="red"></button>
+        <button id="orange"></button>
+        <button id="yellow"></button>
+        <button id="green"></button>
+        <button id="blue"></button>
+        <button id="purple"></button>
+        <button id="pink"></button>
+        <button id="black"></button>
+        <article>
+            <h2>Instructions</h2>
+            <p>Draw what you see through the camera. What's in you surroundings? Who do you see? Try drawing your face with one line.</p>
+        </article>
+    </section>
 </body>
 </html>
