proto and storyboard

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                     <ul>
                         <li><a href="capstone/development/proposal.html">topic choice</a></li>
                         <li><a href="capstone/development/projectbrief.html">project brief</a></li>
-                        <li><a href="#">storyboard</a></li>
-                        <li><a href="#">flows</a></li>
+                        <li><a href="capstone/development/storyboard.html">storyboard</a></li>
+                        <li><a href="capstone/development/paper.html">paper prototypes</a></li>
                         <li><a href="#">interactive comp</a></li>
                         <li><a href="#">version one</a></li>
                         <li><a href="#">version two</a></li>
