--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </li>
                         <li><a href="capstone/research/bibliography.html">annotated bibliography</a>
                         </li>
-                        <li><a href="#">visual research</a>
+                        <li><a href="capstone/research/moodboard.html">visual research</a>
                         </li>
                         <li><a href="#">feasibility report</a>
                         </li>
