--- a/capstone/research/interviews.html
+++ b/capstone/research/interviews.html
@@ -16,12 +16,12 @@
     <h2>Interviewees</h2>
     <div id="interviewees">
         <div>
-            <h3>Name</h3>
-            <p>Grade</p>
+            <h3>Evelyn Thompson</h3>
+            <p>5th Grade</p>
         </div>
         <div>
-            <h3>Name</h3>
-            <p>Grade</p>
+            <h3>Lisset Savala</h3>
+            <p>4th Grade</p>
         </div>
         <div>
             <h3>Name</h3>
@@ -39,6 +39,6 @@
         <li>What do you like most about plants? and what’s your favorite plant?</li>
     </ol>
     <h2>Summary</h2>
-    <p>The interviewees were selected from Beamer Elementary School in Woodland, CA. </p>
+    <p>The interviewees were selected from my workplave at Beamer Elementary School in Woodland, CA. From my interviews, I learned about young people's interest in plants and animals and their internet usage during and after school. </p>
 </body>
 </html>
