--- a/capstone/research/interviews.html
+++ b/capstone/research/interviews.html
@@ -19,13 +19,9 @@
             <h3>Evelyn Thompson</h3>
             <p>5th Grade</p>
         </div>
-        <div>
-            <h3>Lisset Savala</h3>
+        <div id="intervieweesLisset">
+            <h3>Lisset Zavala</h3>
             <p>4th Grade</p>
-        </div>
-        <div>
-            <h3>Name</h3>
-            <p>Grade</p>
         </div>
     </div>
     <h2>Questions</h2>
@@ -39,6 +35,9 @@
         <li>What do you like most about plants? and what’s your favorite plant?</li>
     </ol>
     <h2>Summary</h2>
-    <p>The interviewees were selected from my workplave at Beamer Elementary School in Woodland, CA. From my interviews, I learned about young people's interest in plants and animals and their internet usage during and after school. </p>
+    <p>The interviewees were selected from my workplace at Beamer Elementary School in Woodland, CA. Interviewees are part of my target audience because they are of elementary age and they use online resources for their education. Through my interviews, I learned about young people's interest in plants and animals, both in general and specifically in their city. I also got an insight into their opinions on educational online resources and their internet usage during and after school.</p>
+    <p>Firstly, the interviewees explained what they love about animals and plants and how knowledgeable they are about the animals and plants in their local area. From their responses, it is evident that the interviewees focus primarily on the visuals of the plants and animals. The responders stated they love how "cute and fluffy" animals are and how some animals' faces "scrunch up" and some don't. One responder also mentioned that they find it interesting how intelligent animals are. As children, they are drawn to their interests through visuals. Sight and touch are the most influential to younger people because their minds are still growing and developing. For my project, I plan to emphasize the illustrations and visual design as well as include information about the physical elements of each plant and animal.</p>
+    <p>Secondly, they spoke about the online educational resources they utilize during school and for their homework assignments. Over 50% of their schoolwork both in and out of the classroom is online. Their teachers have them use Google Classroom and I-Ready (an online platform where they fulfill homework assignments). I-Ready attempts to teach students lesson through fun games and graphics. The interviewees dislike I-Ready because it feels tedious and the reward system is flawed. They would like to see "more games" and interactive learning elements to make learning more fun. From this, I gathered that users will want a variety of interactive elements to stay excited and engaged with the site.</p>
+    <p>Overall, the interviews allowed me to solidify design decisions for my project. I plan to make the visuals and interactions stimulating by utilizing bright colors and various hover animations. There will be minimal text and a consistent layout for easy readability. Now that I understand my target audience's desires more thoroughly I can design and distribute information in a way that is catered to them. </p>
 </body>
 </html>
