--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </li>
                         <li><a href="capstone/research/companalysis.html">comparative analysis</a>
                         </li>
-                        <li><a href="#">interviews</a>
+                        <li><a href="capstone/research/interviews.html">interviews</a>
                         </li>
                         <li><a href="capstone/research/bibliography.html">annotated bibliography</a>
                         </li>
@@ -75,7 +75,7 @@
                         <li><a href="capstone/development/projectbrief.html">project brief</a></li>
                         <li><a href="capstone/development/storyboard.html">storyboard</a></li>
                         <li><a href="capstone/development/paper.html">paper prototypes</a></li>
-                        <li><a href="#">interactive comp</a></li>
+                        <li><a href="capstone/development/flow.html">flows</a></li>
                         <li><a href="#">version one</a></li>
                         <li><a href="#">version two</a></li>
                         <li><a href="#">user test</a></li>
