--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </li>
                         <li><a href="capstone/research/moodboard.html">visual research</a>
                         </li>
-                        <li><a href="#">feasibility report</a>
+                        <li><a href="capstone/research/feasabilityreport.html">feasibility report</a>
                         </li>
                     </ul>
                 </nav>
