--- a/capstone/research/feasabilityreport.html
+++ b/capstone/research/feasabilityreport.html
@@ -33,6 +33,6 @@
     </ol>
 
     <h2>Self-Assessment</h2>
-    <p>With my current skills, the feasibility of implementing these features onto my site is strong. Through former projects, I have practiced using all the mentioned methods, therefore, I believe I’ll be able to achieve each feature. </p>
+    <p>With my current skills, the feasibility of implementing these features onto my site is strong. Through former projects, I have practiced using all the mentioned methods, therefore, I believe I’ll be able to achieve each feature. I feel most comfortable in my CSS animation and JS DOM functions abilities. It will take more research to implement HTML forms and functions and JS libraries.</p>
 </body>
 </html>
