--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                         <li><a href="capstone/development/projectbrief.html">project brief</a></li>
                         <li><a href="capstone/development/storyboard.html">storyboard</a></li>
                         <li><a href="capstone/development/paper.html">paper prototypes</a></li>
+                        <li><a href="capstone/development/sketches.html">sketches</a></li>
                         <li><a href="capstone/development/flow.html">flows</a></li>
                         <li><a href="#">version one</a></li>
                         <li><a href="#">version two</a></li>
