--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <li><a href="touch_events/index.html">touch events</a></li>
                         <li><a href="friendslist/index.html">friends list</a></li>
                         <li><a href="#">lazy loader</a></li>
-                        <li><a href="#">arrow functions</a></li>
+                        <li><a href="arrowfunctions/arrowfunctions.html">arrow functions</a></li>
                     </ol>
                 </nav>
             </section>
