--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                         <li><a href="capstone/development/paper.html">paper prototypes</a></li>
                         <li><a href="capstone/development/sketches.html">sketches</a></li>
                         <li><a href="capstone/development/flow.html">flows</a></li>
+                        <li><a href="capstone/development/interactive.html">interactive comp</a></li>
                         <li><a href="#">version one</a></li>
                         <li><a href="#">version two</a></li>
                         <li><a href="#">user test</a></li>
