--- a/capstone/development/interactive.html
+++ b/capstone/development/interactive.html
@@ -16,7 +16,8 @@
     <video width="800" controls>
         <source src="images/ic.mp4" type="video/mp4">
         <source src="images/ic.webm" type="video/webm">
-      Your browser does not support the video tag.
-      </video>
+    Your browser does not support the video tag.
+    </video><br>
+    <a href="https://www.figma.com/proto/F9hc7od07jCbJFKVAbBpRh/157B?page-id=0%3A1&type=design&node-id=112-14&viewport=136%2C87%2C0.06&scaling=contain&starting-point-node-id=112%3A32">Link to Figma Prototype</a>
 </body>
 </html>
