--- a/studio3/index.html
+++ b/studio3/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
     <link href="styles.css" rel="stylesheet"/>
     <title>Ministudio 3: Library Liberty</title>
     <script src="script.js" defer></script>
@@ -29,7 +30,7 @@
             <button id="purple"></button>
             <button id="pink"></button>
             <button id="black"></button>
-            <button id="delete"><img src="images/delete.svg" alt="delete" width="60"></button>
+            <button id="delete">/</button>
         </div>
     </section>
     <div id="mySketch">
