--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <li><a href="capstone/development/flow.html">flows</a></li>
                         <li><a href="capstone/development/interactive.html">interactive comp</a></li>
                         <li><a href="capstone/development/version1/index.html">version one</a></li>
-                        <li><a href="#">version two</a></li>
+                        <li><a href="capstone/development/version2/index.html">version two</a></li>
                         <li><a href="#">user test</a></li>
                         <li><a href="#">version three</a></li>
                     </ul>
