--- a/capstone/development/usability/index.html
+++ b/capstone/development/usability/index.html
@@ -16,24 +16,38 @@
     <!-- COW PAGES -->
     <section id="cowpage1" class="hidden">
         <div class="heading">
-            <img src="images/flower1.png" alt="flowers1" width="50" class="flower">
+            <img src="images/flower1.svg" alt="flowers1" width="50" class="flower">
             <div>
                 <h1><span class="davis">Davis</span>Buddies and Buds</h1>
             </div>
-            <img src="images/flower2.png" alt="flowers2" width="50" class="flower">
+            <img src="images/flower2.svg" alt="flowers2" width="50" class="flower">
         </div>
         <button class="homeicon"><img src="images/home.svg" alt="home" width="40"></button>
         <div id="page1layout">
-            <img src="images/cow.png" alt="cow" width="650">
+            <img src="images/cow.svg" alt="cow" width="650">
             <article>
                 <p>hi! my name is callie the cow...</p>
             </article>
         </div>
+        <button id="next">next</button>
     </section>
-    <!-- <section id="cowpage2">
-        <img src="images/cow.png" alt="cow" width="175">
+    <section id="cowpage2" class="hidden">
+        <div class="heading">
+            <img src="images/flower1.svg" alt="flowers1" width="50" class="flower">
+            <div>
+                <h1><span class="davis">Davis</span>Buddies and Buds</h1>
+            </div>
+            <img src="images/flower2.svg" alt="flowers2" width="50" class="flower">
+        </div>
+        <button class="homeicon"><img src="images/home.svg" alt="home" width="40"></button>
+        <div id="page2layout">
+            <img src="images/cow.svg" alt="cow" width="900">
+            <article>
+                <p>I have horns on my head</p>
+            </article>
+        </div>
     </section>
-    <section id="cowpage3">
+    <!-- <section id="cowpage3">
         <img src="images/cow.png" alt="cow" width="175">
     </section>
     <section id="cowpage4">
@@ -44,32 +58,32 @@
     </section>
     <section id="cowpage6">
         <img src="images/cow.png" alt="cow" width="175">
-    </section> -->
+    </section> --> 
 
     <!-- HOME PAGE -->
     <section id="homepage" class="showing">
         <div id="headinghome">
-            <img src="images/flower1.png" alt="flowers1" width="90" class="flowerhome">
+            <img src="images/flower1.svg" alt="flowers1" width="90" class="flowerhome">
             <div>
                 <h1><span class="davishome">Davis</span>Buddies and Buds</h1>
             </div>
-            <img src="images/flower2.png" alt="flowers2" width="90" class="flowerhome">
+            <img src="images/flower2.svg" alt="flowers2" width="90" class="flowerhome">
         </div>
         <div>
-            <button id="cow" class="homebutton"><img src="images/cow.png" alt="cow" width="175"></button>
-            <button id="duck" class="homebutton"><img src="images/duck.png" alt="duck" width="175"></button>
-            <button id="squirrel" class="homebutton"><img src="images/squirrel.png" alt="squirrel" width="175"></button>
-            <button id="turkey" class="homebutton"><img src="images/turkey.png" alt="turkey" width="175"></button>
-            <button id="magpie" class="homebutton"><img src="images/magpie.png" alt="magpie" width="175"></button>
-            <button id="turtle" class="homebutton"><img src="images/turtle.png" alt="turtle" width="175"></button>
+            <button id="cow" class="homebutton"><img src="images/cow.svg" alt="cow" width="175"></button>
+            <button id="duck" class="homebutton"><img src="images/duck.svg" alt="duck" width="175"></button>
+            <button id="squirrel" class="homebutton"><img src="images/squirrel.svg" alt="squirrel" width="175"></button>
+            <button id="turkey" class="homebutton"><img src="images/turkey.svg" alt="turkey" width="175"></button>
+            <button id="magpie" class="homebutton"><img src="images/magpie.svg" alt="magpie" width="175"></button>
+            <button id="turtle" class="homebutton"><img src="images/turtle.svg" alt="turtle" width="175"></button>
         </div>
         <div>
-            <button id="redwood" class="homebutton"><img src="images/big tree.png" alt="redwood" width="150"></button>
-            <button id="poppy" class="homebutton"><img src="images/poppy.png" alt="poppy" width="150"></button>
-            <button id="gingko" class="homebutton"><img src="images/sunflower.png" alt="gingko" width="150"></button>
-            <button id="lilacs" class="homebutton"><img src="images/tree.png" alt="lilacs" width="150"></button>
-            <button id="oaks" class="homebutton"><img src="images/cow.png" alt="oaks" width="150"></button>
-            <button id="roses" class="homebutton"><img src="images/cow.png" alt="roses" width="150"></button>
+            <button id="redwood" class="homebutton"><img src="images/redwood.svg" alt="redwood" width="175"></button>
+            <button id="poppy" class="homebutton"><img src="images/poppy.svg" alt="poppy" width="175"></button>
+            <button id="gingko" class="homebutton"><img src="images/ginkgo.svg" alt="gingko" width="175"></button>
+            <button id="lilacs" class="homebutton"><img src="images/lilac.svg" alt="lilacs" width="175"></button>
+            <button id="oaks" class="homebutton"><img src="images/oak.svg" alt="oaks" width="175"></button>
+            <button id="roses" class="homebutton"><img src="images/rose.svg" alt="roses" width="175"></button>
         </div>
     </section>
 </body>
