--- a/capstone/development/usability/index.html
+++ b/capstone/development/usability/index.html
@@ -14,39 +14,41 @@
 </head>
 <body>
     <!-- COW PAGES -->
-    <section id="cowpage1" class="hidden">
-        <div class="heading">
-            <img src="images/flower1.svg" alt="flowers1" width="50" class="flower">
-            <div>
-                <h1><span class="davis">Davis</span>Buddies and Buds</h1>
+    <div class="cowsection">
+        <section id="cowpage1" class="hidden">
+            <div class="heading">
+                <img src="images/flower1.svg" alt="flowers1" width="50" class="flower">
+                <div>
+                    <h1><span class="davis">Davis</span>Buddies and Buds</h1>
+                </div>
+                <img src="images/flower2.svg" alt="flowers2" width="50" class="flower">
             </div>
-            <img src="images/flower2.svg" alt="flowers2" width="50" class="flower">
-        </div>
-        <button class="homeicon"><img src="images/home.svg" alt="home" width="40"></button>
-        <div id="page1layout">
-            <img src="images/cow.svg" alt="cow" width="650">
-            <article>
-                <p>hi! my name is callie the cow...</p>
-            </article>
-        </div>
-        <button id="next">next</button>
-    </section>
-    <section id="cowpage2" class="hidden">
-        <div class="heading">
-            <img src="images/flower1.svg" alt="flowers1" width="50" class="flower">
-            <div>
-                <h1><span class="davis">Davis</span>Buddies and Buds</h1>
+            <button class="homeicon"><img src="images/home.svg" alt="home" width="40"></button>
+            <div id="page1layout">
+                <img src="images/cow.svg" alt="cow" width="650">
+                <article>
+                    <p>hi! my name is callie the cow...</p>
+                </article>
             </div>
-            <img src="images/flower2.svg" alt="flowers2" width="50" class="flower">
-        </div>
-        <button class="homeicon"><img src="images/home.svg" alt="home" width="40"></button>
-        <div id="page2layout">
-            <img src="images/cow.svg" alt="cow" width="900">
-            <article>
-                <p>I have horns on my head</p>
-            </article>
-        </div>
-    </section>
+            <button id="next">next</button>
+        </section>
+        <section id="cowpage2" class="hidden">
+            <div class="heading">
+                <img src="images/flower1.svg" alt="flowers1" width="50" class="flower">
+                <div>
+                    <h1><span class="davis">Davis</span>Buddies and Buds</h1>
+                </div>
+                <img src="images/flower2.svg" alt="flowers2" width="50" class="flower">
+            </div>
+            <button class="back"><img src="images/back.png" alt="back" width="50"></button>
+            <div id="page2layout">
+                <img src="images/cow.svg" alt="cow" width="900">
+                <article>
+                    <p>I have horns on my head</p>
+                </article>
+            </div>
+        </section>
+    </div>
     <!-- <section id="cowpage3">
         <img src="images/cow.png" alt="cow" width="175">
     </section>
