--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                         <li><a href="capstone/development/version1/index.html">version one</a></li>
                         <li><a href="capstone/development/version2/index.html">version two</a></li>
                         <li><a href="capstone/development/usability/index.html">usability test</a></li>
+                        <li><a href="capstone/development/usability-results.html">usability test results</a></li>
                         <li><a href="#">version three</a></li>
                     </ul>
                 </nav>
