--- a/capstone/development/paper.html
+++ b/capstone/development/paper.html
@@ -14,13 +14,13 @@
 <body>
     <h1>Paper Prototypes</h1>
     <h2>Prototype Pages</h2>
-    <img src="../../images/proto1.jpg" alt="proto" width="600">
+    <img src="images/proto1.jpg" alt="proto" width="600">
     <h2>Testing</h2>
     <div id="papergrid">
-        <img src="../../images/1.png" alt="proto1" width="275">
-        <img src="../../images/2.png" alt="proto2" width="275">
-        <img src="../../images/3.png" alt="proto3" width="275">
-        <img src="../../images/4.png" alt="proto4" width="275">
+        <img src="images/1.png" alt="proto1" width="275">
+        <img src="images/2.png" alt="proto2" width="275">
+        <img src="images/3.png" alt="proto3" width="275">
+        <img src="images/4.png" alt="proto4" width="275">
     </div>
     <h2>Summary</h2>
     <p>For the paper prototypes I tested the user journey for one of the clickable items on the home screen. The prototypes took the tester through each informational page of one of the featured animals. The tester could easily fulfill the tasks and understand the flow of interactions. After testing, it was clear that the user experience was understandable and fluid which brought reassurance to my design.</p>
