--- a/capstone/development/version3 update/index.html
+++ b/capstone/development/version3 update/index.html
@@ -22,8 +22,41 @@
         </div>
     </header>
     
+    <div class="animalsection hidden">
+        <section class="page1 hidden">
+            <div class="page1layout">
+                <img src="images/cow.svg" alt="cow" width="650">
+                <article class="page1article">
+                    <p class="page1text"></p>
+                </article>
+            </div>
+            <button class="next">next</button>
+        </section>
+        <section class="page2 hidden">
+            <button class="back"><img src="images/back.png" alt="back" width="30"></button>
+            <div class="page2layout">
+                <article class="page2article">
+                    <p class="page2text"></p>
+                </article>
+                <img src="images/cow.svg" alt="cow" width="400">
+            </div>
+            <button class="next2">next</button>
+        </section>
+        <section class="page3 hidden">
+            <button class="back2"><img src="images/back.png" alt="back" width="30"></button>
+            <div class="page3layout">
+                <article class="page3article">
+                    <p class="page3text"></p>
+                </article>
+                <img src="images/cow.jpeg" alt="realcow" width="450" height="450" class="realimage">
+                <img src="images/cow.svg" alt="cow" width="250" class="flip" >
+            </div>
+            <button class="backhome">home</button>
+        </section>
+        <button class="homeicon"><img src="images/home.svg" alt="home" width="40"></button>
+    </div>
     <!-- COW PAGES -->
-    <div id="cowsection" class="hidden">
+    <!-- <div id="cowsection" class="hidden">
         <section id="cowpage1" class="hidden">
             <div class="page1layout">
                 <img src="images/cow.svg" alt="cow" width="650">
@@ -55,10 +88,10 @@
             <button class="backhome">home</button>
         </section>
         <button class="homeicon"><img src="images/home.svg" alt="home" width="40"></button>
-    </div>
+    </div> -->
 
     <!-- DUCK PAGES -->
-    <div id="ducksection" class="hidden">
+    <!-- <div id="ducksection" class="hidden">
         <section id="duckpage1" class="hidden">
             <div class="page1layout">
                 <img src="images/duck.svg" alt="duck" width="650">
@@ -90,7 +123,7 @@
             <button class="backhome">home</button>
         </section>
         <button class="homeicon"><img src="images/home.svg" alt="home" width="40"></button>
-    </div>
+    </div> -->
 
     <!-- HOME PAGE -->
     <section id="homepage" class="showing">
