--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <li><a href="capstone/development/version2/index.html">version two</a></li>
                         <li><a href="capstone/development/usability/index.html">usability test</a></li>
                         <li><a href="capstone/development/usability-results.html">usability test results</a></li>
-                        <li><a href="capstone/development/version3/index.htmls">version three</a></li>
+                        <li><a href="capstone/development/version3/index.html">version three</a></li>
                     </ul>
                 </nav>
             </section>
