--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <h3>⭒⭒ capstone ⭒⭒</h3>
                 <nav>
                     <ul>
-                        <li><a href="https://docs.google.com/presentation/d/1goJc5Q81xNy3gCNG7evawODkICyhhsDsNOWsWdNq1EM/edit?usp=sharing">case study</a></li>
+                        <li><a href="https://docs.google.com/presentation/d/1goJc5Q81xNy3gCNG7evawODkICyhhsDsNOWsWdNq1EM/edit?usp=sharing">presentation</a></li>
                         <li><a href="#">project</a></li>
                     </ul>
                 </nav>
