--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <nav>
                     <ul>
                         <li><a href="https://docs.google.com/presentation/d/1goJc5Q81xNy3gCNG7evawODkICyhhsDsNOWsWdNq1EM/edit?usp=sharing">presentation</a></li>
-                        <li><a href="#">project</a></li>
+                        <li><a href="capstone/index.html">project</a></li>
                     </ul>
                 </nav>
             </section>
