--- a/capstone/index.html
+++ b/capstone/index.html
@@ -39,7 +39,7 @@
                 <article class="page2article">
                     <p class="page2text"></p>
                 </article>
-                <img src="images/cow.svg" alt="cow" width="400" id="cowpage2">
+                <img src="images/cow.svg" alt="cow" width="400" id="cowimg2">
             </div>
             <button class="next2">next</button>
         </section>
@@ -214,7 +214,7 @@
                 <article class="page2article">
                     <p class="page17text"></p>
                 </article>
-                <img src="images/turtle.svg" alt="turtle" width="400" id="turtlepage2">
+                <img src="images/turtle.svg" alt="turtle" width="400" id="turtleimg2">
             </div>
             <button class="next12">next</button>
         </section>
