--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <div>
                 <img src="images/lsh1.png" alt="LSH" width="400" id="lsh1">
-                <h2>DES 157B - Interactive Media III - S23</h2>
+                <h2>Davis Buddies and Buds Case Study</h2>
             </div>
             <div id="banner">
                 <img src="images/bear1.png" alt="BEARone" width="400" id="bear1">
